--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ langserve
 fastapi # for building RESTful APIs in Python
 uvicorn # web server implementation for Python
 sse_starlette # requirement for langserve
+bs4 # for reading the data from webpages
+pypdf # needed for PyPDFLoader
+chromadb # for vectorstore (vector database)
+sentence_transformers # for huggingface embeddings
